--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ cachetools==5.2.0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+crispy-bootstrap5==0.7
 cryptography==38.0.3
 defusedxml==0.7.1
 Deprecated==1.2.13
 Django==4.1.3
 django-allauth==0.51.0
+django-cors-headers==3.13.0
+django-crispy-forms==1.14.0
 django-gmailapi-backend==0.3.2
 gcloud==0.18.3
 gmail==0.6.3
